[package]
name = "rec"
version = "0.0.1"
edition = "2021"
license = "BSL-1.0"
homepage = "https://github.com/xxai-art/rec"
repository = "https://github.com/xxai-art/rec"
description = ""

[dependencies]
anyhow = "1.0.75"
apg = "0.0.10"
clip_qdrant = "0.1.2"
const-str = "0.5.6"
gt = "0.0.10"
intbin = "0.0.5"
loginit = "0.1.3"
qdrant-client = "1.6.0"
strum_macros = "0.25.2"
sts = "0.0.4"
tokio = { version = "1.33.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync"
] }
tracing = "0.1.37"
vb = "0.0.7"
xkv = "0.1.17"

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
incremental = true
#codegen-units = 1
overflow-checks = false
panic = 'abort'
debug-assertions = false
# strip = true
